2010-12-04  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish msys-mintty.

	* msys/msys-mintty.xml: Update to 0.9.3-1.
	* msys/issue.log: Updated accordingly.

2010-10-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish msys-mintty.

	* msys/msys-mintty.xml: Update to 0.9.2-1.
	* msys/issue.log: Updated accordingly.

2010-10-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Work around for improper chronological sorting of release status
	fields; (issue reported by Chris Sutcliffe).

	* mingw32/mingw32-mingw-get.xml (all package components): Present
	release records in reverse chronological (newest first) order.
	* mingw32/issue.log: Republish, and update accordingly.

2010-10-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add and publish manifest for mingw-get.

	* mingw32/mingw32-mingw-get.xml: New file;
	generate and publish mingw32-mingw-get.xml.lzma
	* mingw32/mingw32-package-list.xml: Register it; regenerate and
	publish mingw32-package-list.xml.lzma
	* mingw32/issue.log: Update accordingly.

2010-10-24  Cesar Strauss  <cestrauss@gmail.com>

	Update & publish msys-bash.

	* msys/msys-bash.xml: Update to 3.1.17-4.
	* msys/issue.log: Updated accordingly.

2010-10-07  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* msys/msys-mintty.xml: Fix typo.

2010-10-07  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* msys/msys-package-list.xml: Add msys-mintty.
	Regenerate and publish msys-package-list.xml.lzma
	* msys/issue.log: Updated accordingly.

2010-10-06  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* msys/msys-mintty.xml: New file.
	* msys/issue.log: Updated accordingly.

2010-09-30  Cesar Strauss  <cestrauss@gmail.com>

	Update & publish msys-core, mingw32-gcc4.

	* msys/msys-core.xml: Update to 1.0.16.

	* mingw32/mingw32-gcc4.xml: Add missing	dependency on
	mingw32-pthreads-w32-dev.
	Remove direct dependency on libpthread-2.dll.

	* msys/issue.log: Updated accordingly.
